@@ -438,6 +438,15 @@ poppr.msn <- function (gid, distmat, palette = topo.colors, mlg.compute = "origi
   V(mst)$pie       <- mlg.cp
   V(mst)$pie.color <- mlg.color
   V(mst)$label     <- vertex.label
+  
+  # Transform pie made of single population into circle
+  pie.single <- sapply(V(mst)$pie, length) == 1
+  if (any(pie.single)) {
+    V(mst)$shape[pie.single] <- "circle"
+    V(mst)$color             <- rep(NA, length(V(mst)$name))
+    V(mst)$color[pie.single] <- unlist(V(mst)$pie.color[pie.single])
+  }
+  
   return(list(graph = mst, populations = pnames, colors = color))
 }
 
